# backend/docs/swagger.yaml
@@ -335,6 +335,69 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Create drug
+  /drugs/{id}:
+    delete:
+      description: get drug by ID
+      operationId: delete-drug
+      parameters:
+      - description: Drug ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Delete a drug entity by ID
+    put:
+      consumes:
+      - application/json
+      description: update drug by ID
+      operationId: update-drug
+      parameters:
+      - description: Drug ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Drug entity
+        in: body
+        name: drugtype
+        required: true
+        schema:
+          $ref: '#/definitions/ent.Drug'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Drug'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Update a drug entity by ID
   /drugtypes:
     get:
       description: list drugtype entities
